--- a/_pages/service.html
+++ b/_pages/service.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">--- layout: archive title: “Services” permalink: /service/ author_profile: true --- {% include base_path %} {% for post in site.service %} {% include archive-single.html %} {% endfor %}</span></p>
+<p class="p1"><span class="s1">--- layout: archive title: “Services” permalink: /service/ author_profile: true --- {% include base_path %} {% for post in site.service reversed %} {% include archive-single.html %} {% endfor %}</span></p>
 </body>
 </html>
