--- a/_pages/service.html
+++ b/_pages/service.html
@@ -9,12 +9,10 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
-    span.s2 {text-decoration: underline ; font-kerning: none; color: #0000e3; -webkit-text-stroke: 0px #0000e3}
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">--- layout: archive title: “Services” permalink: /service/ author_profile: true --- {% if site.author.googlescholar %}</span></p>
-<p class="p1"><span class="s1">You can also find my articles on <a href="file:///Users/zhaoren/Documents/GitHub/zhaoren91.github.io/_pages/%7B%7Bsite.author.googlescholar%7D%7D"><span class="s2">my Google Scholar profile</span></a>.</span></p>
+<p class="p1"><span class="s1">--- layout: archive title: “Services” permalink: /service/ author_profile: true ---<span class="Apple-converted-space"> </span></span></p>
 <p class="p1"><span class="s1">{% endif %} {% include base_path %}<span class="Apple-converted-space"> </span></span></p>
 </body>
 </html>
